# globtel-weather-scoring

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: cities.py
app/core/: cities.py  config.py
app/schemas/: weather.py
app/services/: meteo.py  scoring.py
app/templates/: index.html
tests/: test_cities_scores.py  test_scoring.py
